tests/snapshots/execution_spec__test-scalar-email.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(graphiql: true, hostname: "localhost", port: 8000) @upstream {
  query: Query
}

input Email {

}

type Query {
  value(email: Email!): Email! @const(data: "{{args.email}}")
}
