tests/snapshots/execution_spec__test-scalars-invalid.md_assert_1.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "internal: invalid value for scalar \"PhoneNumber\", expected \"FieldValue::Value\"",
        "locations": [
          {
            "line": 1,
            "column": 3
          }
        ],
        "path": [
          "phone"
        ]
      }
    ]
  }
}
