tests/snapshots/execution_spec__test-scalars.md_assert_1.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "value_phone": "+1 (614) 1234567"
    }
  }
}
