tests/snapshots/execution_spec__test-scalars.md_assert_4.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "internal: invalid value for scalar \"Email\", expected \"FieldValue::Value\"",
        "locations": [
          {
            "line": 1,
            "column": 3
          }
        ],
        "path": [
          "email"
        ]
      }
    ]
  }
}
