tests/snapshots/execution_spec__test-scalars.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Query {
  date(value: Date!): Date!
  email(value: Email!): Email!
  phone(value: PhoneNumber!): PhoneNumber!
  url(value: Url!): Url!
}

scalar Url

schema {
  query: Query
}
