tests/snapshots/execution_spec__test-scalars.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(graphiql: true, hostname: "localhost", port: 8000) {
  query: Query
}

scalar Date

scalar Email

scalar PhoneNumber

scalar Url

type Query {
  date(value: Date!): Date! @expr(body: "{{args.value}}")
  email(value: Email!): Email! @expr(body: "{{args.value}}")
  phone(value: PhoneNumber!): PhoneNumber! @expr(body: "{{args.value}}")
  url(value: Url!): Url! @expr(body: "{{args.value}}")
}
